FIXED: Fix an issue where the move handlers were being clipped when the container block was fullwidth
git-svn-id: https://cssigniter.svn.beanstalkapp.com/cssigniter/plugins/gutenbee/trunk@30335 4294cb29-2c39-44b5-8b85-408dc27d7d38

--- a/src/blocks/container/_editor.scss
+++ b/src/blocks/container/_editor.scss
@@ -138,6 +138,17 @@
 }
 
 [data-type="gutenbee/container"] {
+  &[data-align="full"] {
+    .wp-block-gutenbee-container-row {
+      > .block-editor-inner-blocks {
+        > .block-editor-block-list__layout {
+          margin-left: 0;
+          margin-right: 0;
+        }
+      }
+    }
+  }
+
   &[data-theme-grid] {
     max-width: none !important;
     margin-left: -42px;
